<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/party_cloud_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_welcome"
        style="@style/TextViewStyleWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_s_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_weather_country"
        style="@style/TextViewStyleWeatherCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome"
        tools:text="@string/location" />

    <TextView
        android:id="@+id/text_weather_city"
        style="@style/TextViewStyleWeatherCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_weather_country"
        app:layout_constraintStart_toEndOf="@+id/text_weather_country"
        app:layout_constraintTop_toTopOf="@+id/text_weather_country"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/city" />


            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/ProgressStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_date"
        style="@style/TextViewStyleWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_weather_degree"
        tools:text="@string/weather_date" />

    <TextView
        android:id="@+id/text_time"
        style="@style/TextViewStyleWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_date"
        app:layout_constraintStart_toEndOf="@+id/text_date"
        app:layout_constraintTop_toTopOf="@+id/text_date"
        tools:text="7" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/weather_image"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginEnd="-32dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/text_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        tools:lottie_rawRes="@raw/sunny1" />

    <TextView
        android:id="@+id/text_weather_degree"
        style="@style/TextViewStyleWeatherDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="54dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_weather_country"
        tools:text="@string/weather_degree" />


    <TextView
        android:id="@+id/text_weather_status"
        style="@style/TextViewStyleWeatherStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_tiny"
        app:layout_constraintBottom_toBottomOf="@+id/text_weather_degree"
        app:layout_constraintStart_toEndOf="@+id/text_weather_degree"
        app:layout_constraintTop_toTopOf="@+id/text_weather_degree"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/weather_status" />

    <TextView
        android:id="@+id/text_header"
        style="@style/TextViewStyleWeatherStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:text="@string/suggest_for_you"
        android:textColor="@color/black_78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_date" />

    <ImageView
        android:id="@+id/image_clothes"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:padding="@dimen/spacing_large"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header" />

</androidx.constraintlayout.widget.ConstraintLayout>